@@ -584,7 +584,6 @@ require version '${required.ant.version}'."/>
       <classpath refid="farrago.sqlline.classpath"/>
       <jvmarg line="${assertions.jvmarg}"/>
       <jvmarg line="&FarragoProps;"/>
-      <sysproperty key="java.ext.dirs" value="${sqlline.dir}"/>
       <sysproperty key="net.sf.farrago.fileset.unitsql"
         value="${filelist.initsql}"/>
       <formatter type="plain"/>
@@ -692,17 +691,33 @@ require version '${required.ant.version}'."/>
 
   <target name="checkResourceUptodate">
     <touch file="${farrago.classes.dir}/FarragoRelease.properties"/>
+
+    <!-- REVIEW: SWZ: 10/4/2005: We should also check the locale-specific
+         properties files generated by resgen to see that they're up-to-date.
+         However, there doesn't seem to be an Ant mapper that maps
+         FooResource.xml to FooResource*.properties and I don't want to
+         enumerate the locales here.  Checking just FooResource.properties
+         should do for now. -->
     <condition property="resource.uptodate">
       <and>
         <uptodate
           srcfile="${farrago.resource.dir}/FarragoResource.xml"
           targetfile="${farrago.resource.dir}/FarragoResource.java"/>
         <uptodate
+          srcfile="${farrago.resource.dir}/FarragoResource.xml"
+          targetfile="${farrago.resource.properties.dir}/FarragoResource.properties"/>
+        <uptodate
           srcfile="${farrago.resource.dir}/FarragoInternalQuery.xml"
           targetfile="${farrago.resource.dir}/FarragoInternalQuery.java"/>
         <uptodate
+          srcfile="${farrago.resource.dir}/FarragoInternalQuery.xml"
+          targetfile="${farrago.resource.properties.dir}/FarragoInternalQuery.properties"/>
+        <uptodate
           srcfile="${eigenbase.resource.dir}/EigenbaseResource.xml"
           targetfile="${eigenbase.resource.dir}/EigenbaseResource.java"/>
+        <uptodate
+          srcfile="${eigenbase.resource.dir}/EigenbaseResource.xml"
+          targetfile="${eigenbase.resource.properties.dir}/EigenbaseResource.properties"/>
       </and>
     </condition>
   </target>
@@ -938,7 +953,6 @@ require version '${required.ant.version}'."/>
       <jvmargs>
         <arg value="-Dnet.sf.farrago.fileset.unitsql=${fileset.unitsql}"/>
         <arg value="-Dcom.lucidera.fileset.unitlurql=${fileset.unitlurql}"/>
-        <arg value="-Djava.ext.dirs=${sqlline.dir}"/>
         <arg line="&FarragoProps;"/>
       </jvmargs>
       <programargs>
@@ -1148,7 +1162,6 @@ require version '${required.ant.version}'."/>
       sourcepath="${farrago.sourcepath}"
       classname="sqlline.SqlLine">
       <jvmargs>
-        <arg value="-Djava.ext.dirs=${sqlline.dir}"/>
         <arg line="&FarragoProps;"/>
       </jvmargs>
       <programargs>
